# ml-intern-mcp-toolkit

./: .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PROMPTS.md  README.md  README_PROMPTS.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  lint.yml  markdown-lint.yml  release.yml  secrets-scan.yml
arxiv_deep/: __init__.py  exceptions.py  server.py
arxiv_deep/tools/: __init__.py  brief.py  code.py  fetch.py  figures.py
demo/: README.md  ml_intern_config.json  run_demo.sh
demo/prompts/: train_lora_alpaca.txt
demo/scripts/: __init__.py  train_hf_jobs.py  train_local.py
docs/: architecture.md  maintainers.md  ml_intern_integration.md  tool_reference.md  troubleshooting.md
examples/: README.md  minimal_arxiv_query.py  minimal_tracker_session.py
experiment_tracker/: __init__.py  db.py  exceptions.py  models.py  server.py
experiment_tracker/tools/: __init__.py  artifacts.py  compare.py  metrics.py  runs.py
scripts/: gen_tool_reference.py  setup.sh
tests/: conftest.py  test_smoke.py
tests/arxiv_deep/: test_extract_figures.py  test_fetch_paper.py  test_find_reference_code.py  test_implementation_brief.py  test_server.py
tests/experiment_tracker/: test_artifacts.py  test_compare.py  test_db.py  test_metrics.py  test_runs.py  test_tracker_server.py
tests/fixtures/: download_fixture.py
tests/integration/: test_demo_config.py  test_demo_orchestration.py  test_tool_reference_in_sync.py
