[project]
name = "ml-intern-mcp-toolkit"
version = "0.0.0"
description = "MCP toolkit extending Hugging Face's ml-intern with deep arxiv reading and experiment tracking."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arxiv",
    "httpx",
    "mcp == 1.27.0",
    "pydantic >= 2",
    "pymupdf",
    "python-dotenv",
    "sqlmodel",
]

[project.optional-dependencies]
demo = [
    "accelerate",
    "datasets",
    "huggingface_hub",
    "peft",
    "torch >= 2.5",
    "transformers",
]

[project.scripts]

[dependency-groups]
dev = [
    "freezegun",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_deep", "experiment_tracker"]
