[project]
name = "ml-intern-mcp-toolkit"
version = "0.0.0"
description = "MCP toolkit extending Hugging Face's ml-intern with deep arxiv reading and experiment tracking."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "arxiv",
    "httpx",
    "mcp == 1.27.0",
    "pydantic >= 2",
    "pymupdf",
    "python-dotenv",
    "sqlmodel",
]

[project.optional-dependencies]
demo = [
    "accelerate",
    "datasets",
    "huggingface_hub",
    "peft",
    "torch >= 2.5",
    "transformers",
]

[project.scripts]
arxiv-deep-server = "arxiv_deep.server:main"
experiment-tracker-server = "experiment_tracker.server:main"

[dependency-groups]
dev = [
    "freezegun",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "respx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["arxiv_deep", "experiment_tracker"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "RUF"]

[tool.mypy]
strict = true
python_version = "3.11"
files = ["arxiv_deep", "experiment_tracker"]
# Tests and demo scripts intentionally fall outside the strict-typed surface.
# Tests rely on monkey-patching that mypy cannot model cleanly; demo scripts
# pull in torch/transformers/peft whose stub coverage is incomplete and not
# worth hand-rolling for a standalone training entry point.
exclude = ["^tests/", "^demo/"]

# Third-party packages that lack a py.typed marker or ship incomplete stubs.
# We only silence the missing-stub error; our own code remains under strict.
[[tool.mypy.overrides]]
module = ["arxiv", "pymupdf"]
ignore_missing_imports = true
follow_imports = "skip"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "slow: tests that take more than a few seconds",
    "integration: tests that require external resources or env vars",
    "network: tests that require network access",
]
